fixes to breadcrumb visibility on mobile
- also fixed some positioning of the search bar

--- a/public/css/module-catalogue.css
+++ b/public/css/module-catalogue.css
@@ -87,17 +87,14 @@ a[data-toggle="popover"]::after {
 	}
 }
 
-.module-search {
-	padding-top: 0.8rem;
-}
-
-.module-search + .breadcrumb {
-	padding: 0 0 1.5rem 0;
-}
-
-
-@media (max-width:992px) {
+@media (min-width:768px) {
 	.module-search {
-		padding-top: 0;
+		padding-top: 1.5rem;
+	}
+}
+
+@media (min-width:768px) {
+	.module-search + .breadcrumb {
+		padding: 0 0 1.5rem 0;
 	}
 }
